--- a/index.html
+++ b/index.html
@@ -215,7 +215,7 @@
 				<div class="col-lg-4 col-md-6 col-12">
 					<!-- Start Single Blog  -->
 					<div class="shop-single-blog">
-						<img src="/eshop/images/html-css-course.jpg" alt="#">
+						<img src="/images/html-css-course.jpg" alt="#">
 						<div class="content">
 							<a href="#" class="title">HTML CSS Basic</a>
 							<a href="#" class="more-btn">Continue Learning</a>
@@ -226,7 +226,7 @@
 				<div class="col-lg-4 col-md-6 col-12">
 					<!-- Start Single Blog  -->
 					<div class="shop-single-blog">
-						<img src="/eshop/images/javascript-2.jpeg" alt="#">
+						<img src="/images/javascript-2.jpeg" alt="#">
 						<div class="content">
 							<a href="#" class="title">JavaScript</a>
 							<a href="#" class="more-btn">Continue Learning</a>
@@ -237,7 +237,7 @@
 				<div class="col-lg-4 col-md-6 col-12">
 					<!-- Start Single Blog  -->
 					<div class="shop-single-blog">
-						<img src="/eshop/images/down.jpg" alt="#">
+						<img src="/images/down.jpg" alt="#">
 						<div class="content">
 							<a href="#" class="title">Programming</a>
 							<a href="#" class="more-btn">Continue Learning</a>
